--- a/css/resistration.css
+++ b/css/resistration.css
@@ -1,4 +1,4 @@
-
+/* 공통 */
 .box-wrap {
     width: 100%;
     display: flex;
@@ -9,6 +9,22 @@
     border: 1px solid #E2E9EE;
     padding: 20px 30px;
     border-radius: 14px;
+}
+.flex-divide {
+    flex-direction: inherit;
+    flex-wrap: inherit;
+}
+.align-items-start {
+    align-items: inherit;
+}
+.mr10 {
+    margin-right: 10px;
+}
+.mr20 {
+    margin-right: 20px;
+}
+.mb20 {
+    margin-bottom: 20px;
 }
 
 /* 첫번째 섹션 시작 */
@@ -161,15 +177,79 @@
 .wrap-05 .b-item {
     margin-right: 60px;
 }
-.mr10 {
-    margin-right: 10px;
-}
+
 .wrap-05 .b-item span {
     margin: 0 15px;
 }
+.wrap-06 > div .b-item:nth-child(1)  {
+   width: fit-content;
+}
+.wrap-06 p {
+    margin-left: 0px;
+}
+/* 마지막 섹션 */
+.wrap-07 .box-style p {
+    line-height: 34px;
+}
+.wrap-07 textarea {
+    margin-top: 20px;
+}
+/* 첨부파일 */
+.file-upload {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+}
+.file-upload input[type="file"] {
+    display: none;
+}
+.file-upload label {
+    padding: 10px 28px;
+    border: 1px solid #1776e1;
+    border-radius: 6px;
+    color: #1776E1;
+    min-width: 120px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.file-upload > div {
+    width: 100%;
+}
+.file-upload > div > div {
+    margin-bottom: 10px;
+}
+.file-upload > div > div p {
+    color: #979BA4;
+}
+/* 파일을 선택하지 않았을 때. */
+.file-upload .file-not-sel > div {
+    display: none;
+}
+/* 파일을 선택했을 때  */
+.file-upload .file-sel {
+    display: block;
+}
+.file-upload .file-sel > p {
+    display: none;
+}
+.file-upload .file-sel > div {
+    width: 100%;
+}
+.file-upload .file-sel > div > div {
+    width: 14px;
+    height: 18px;
+    background: url(../img/icon-file-upload.svg) no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (max-width:1023px) {
+    .flex-divide {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
     /* 첫번째 섹션 */
     .wrap-01 {
         display: block;
@@ -201,12 +281,20 @@
     .wrap-04 > div {
         flex-direction: column;
     }
-    
-    
+    .wrap-06 p {
+        margin-left: 90px;
+    }  
+    .align-items-start {
+        align-items: start !important;
+    }
+    .w100p {
+        width: 100% !important;
+    }
 } 
 
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
 @media all and (max-width:767px) {
+  
     .wrap-01 > div:first-child {
         margin: 0 auto 20px;
         width: 100%;
@@ -275,5 +363,16 @@
     .wrap-05 > div input:nth-of-type(1){
         margin-bottom: 10px;
     }
-  
+    .b-item-06 input:nth-of-type(1) {
+        margin-bottom: 0 !important;
+    }
+    .wrap-06 p {
+      margin-left: 0;   
+    }
+    .wrap-06 > div .b-item:nth-child(1) {
+        width: 100%;
+        margin-right: 0;
+    }
+   
+    
 }
