--- a/css/common.css
+++ b/css/common.css
@@ -119,6 +119,13 @@ padding: 13px;
     letter-spacing: -0.03em;
     color: #979BA4;
 }
+.input-nomal:-ms-input-placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: -0.03em;
+    color: #979BA4;
+}
 .top-nab-btn {
     text-align: center;
     margin-bottom: 22px;
@@ -196,8 +203,8 @@ input[type='radio']:checked + .radio-nomal{
     color: #979BA4;
 }
 input[type="checkbox"]:checked + .check-nomal{
-    border: 2px solid #1776E1;
-    background-color: #1776E1;
+    border: 2px solid #468AF5;
+    background-color: #468AF5;
     color: #fff;
 }
 input[type="number"]::-webkit-outer-spin-button,
@@ -220,7 +227,8 @@ input[type="number"]::-webkit-inner-spin-button {
     border-radius: 6px;
     font-size: 16px;
     position: relative;
-    background: #fff, url('/img/input-date-icon.png') no-repeat 94% 50%/15px auto;
+    background: url('/img/input-date-icon.png') no-repeat 94% 50%/15px auto;
+    background-color: #fff;
 
 }
 .textarea-nomal {
@@ -282,7 +290,7 @@ input[type="number"]::-webkit-inner-spin-button {
     margin-left: 10px;
 }
 .container__list li {
-    list-style:initial;
+    list-style:disc;
     margin-left: 20px;
     line-height: 34px;
     color: #555555;
@@ -376,83 +384,50 @@ input[type="checkbox"]:checked + .check-small {
 /* 그리드 */
 
 .grid {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
+    justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(5rem, auto);
-    grid-gap: 30px;
-  }
-  .grid .col-1 {
-    grid-column-end: span 1;
-  }
-  .grid .row-1 {
-    grid-row-end: span 1;
-  }
-  .grid .col-2 {
-    grid-column-end: span 2;
-  }
-  .grid .row-2 {
-    grid-row-end: span 2;
-  }
-  .grid .col-3 {
-    grid-column-end: span 3;
-  }
-  .grid .row-3 {
-    grid-row-end: span 3;
-  }
-  .grid .col-4 {
-    grid-column-end: span 4;
-  }
-  .grid .row-4 {
-    grid-row-end: span 4;
-  }
-  .grid .col-5 {
-    grid-column-end: span 5;
-  }
-  .grid .row-5 {
-    grid-row-end: span 5;
-  }
-  .grid .col-6 {
-    grid-column-end: span 6;
-  }
-  .grid .row-6 {
-    grid-row-end: span 6;
-  }
-  .grid .col-7 {
-    grid-column-end: span 7;
-  }
-  .grid .row-7 {
-    grid-row-end: span 7;
-  }
-  .grid .col-8 {
-    grid-column-end: span 8;
-  }
-  .grid .row-8 {
-    grid-row-end: span 8;
-  }
-  .grid .col-9 {
-    grid-column-end: span 9;
-  }
-  .grid .row-9 {
-    grid-row-end: span 9;
-  }
-  .grid .col-10 {
-    grid-column-end: span 10;
-  }
-  .grid .row-10 {
-    grid-row-end: span 10;
-  }
-  .grid .col-11 {
-    grid-column-end: span 11;
-  }
-  .grid .row-11 {
-    grid-row-end: span 11;
-  }
-  .grid .col-full, .grid .col-12 {
-    grid-column: 1 / -1;
-  }
+    }
+    .grid .col-1 {
+        width: calc(100% / 12 * 1 - 15px);
+    }
+    .grid .col-2 {
+        width: calc(100% / 12 * 2 - 15px);
+    }
+    .grid .col-3 {
+        width: calc(100% / 12 * 3 - 15px);
+    }
+    .grid .col-4 {
+        width: calc(100% / 12 * 4 - 15px);
+    }
+    .grid .col-5 {
+        width: calc(100% / 12 * 5 - 15px);
+    }
+    .grid .col-6 {
+        width: calc(100% / 12 * 6 - 15px);
+    }
+    .grid .col-7 {
+        width: calc(100% / 12 * 7 - 15px);
+    }
+    .grid .col-8 {
+        width: calc(100% / 12 * 8 - 15px);
+    }
+    .grid .col-9 {
+        width: calc(100% / 12 * 8 - 15px);
+    }
+    .grid .col-10 {
+        width: calc(100% / 12 * 10 - 15px);
+    }
+    .grid .col-11 {
+        width: calc(100% / 12 * 11 - 15px);
+    }
+    .grid .col-12 {
+        width: calc(100%);
+    }
+  
   .item {
     background-color: #fff;
   }
@@ -962,6 +937,9 @@ transform: rotate(180deg);
     width: auto;
     height: 38px;
 }
+.mobile-only {
+    display: none;
+}
 /* 모바일 메뉴 끝 */
 
 
@@ -983,6 +961,12 @@ transform: rotate(180deg);
 
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (max-width:1023px) {
+    .mobile-only {
+        display: block;
+    }
+    .pc-only {
+        display: none;
+    }
     .btn-round, .btn-nomal{
         width: 100%;
         border-radius: 7px;
@@ -1105,76 +1089,12 @@ transform: rotate(180deg);
         padding-bottom: 18px;
     }
     section, header{
-        min-width: initial;
+        min-width:auto;
     }
-    .grid .m960-col-1 {
-        grid-column-end: span 1;
-      }
-      .grid .m960-row-1 {
-        grid-row-end: span 1;
-      }
-      .grid .m960-col-2 {
-        grid-column-end: span 2;
-      }
-      .grid .m960-row-2 {
-        grid-row-end: span 2;
-      }
-      .grid .m960-col-3 {
-        grid-column-end: span 3;
-      }
-      .grid .m960-row-3 {
-        grid-row-end: span 3;
-      }
-      .grid .m960-col-4 {
-        grid-column-end: span 4;
-      }
-      .grid .m960-row-4 {
-        grid-row-end: span 4;
-      }
-      .grid .m960-col-5 {
-        grid-column-end: span 5;
-      }
-      .grid .m960-row-5 {
-        grid-row-end: span 5;
-      }
-      .grid .m960-col-6 {
-        grid-column-end: span 6;
-      }
-      .grid .m960-row-6 {
-        grid-row-end: span 6;
-      }
-      .grid .m960-col-7 {
-        grid-column-end: span 7;
-      }
-      .grid .m960-row-7 {
-        grid-row-end: span 7;
-      }
-      .grid .m960-col-8 {
-        grid-column-end: span 8;
-      }
-      .grid .m960-row-8 {
-        grid-row-end: span 8;
-      }
-      .grid .m960-col-9 {
-        grid-column-end: span 9;
-      }
-      .grid .m960-row-9 {
-        grid-row-end: span 9;
-      }
-      .grid .m960-col-10 {
-        grid-column-end: span 10;
-      }
-      .grid .m960-row-10 {
-        grid-row-end: span 10;
-      }
-      .grid .m960-col-11 {
-        grid-column-end: span 11;
-      }
-      .grid .m960-row-11 {
-        grid-row-end: span 11;
-      }
-      .grid .m960-col-full, .grid .m960-col-12 {
-        grid-column: 1 / -1;
+    
+     
+      .grid .m960-col-12 {
+        width: 100%;
       }
 
       .input-nomal {
@@ -1206,5 +1126,15 @@ transform: rotate(180deg);
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none){
     .header__menu .header__step1 ul{
         left: 0;
+    }
+    .header__menu .header__step1:nth-child(1) ul{
+        transform: translateX(-20px);
+    }
+    .header__menu .header__step1:nth-child(3) ul, .header__menu .header__step1:nth-child(4) ul, .header__menu .header__step1:nth-child(5) ul, .header__menu .header__step1:nth-child(6) ul {
+        transform: translateX(-30%);
+
+    }
+    .header__menu.title-banner-menu .header__step1 ul{
+        transform: none;
     }
 }
