--- a/css/main.css
+++ b/css/main.css
@@ -361,3 +361,10 @@ line-height: 40px;
    
 
 }
+
+/* 익스플로러 */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none){
+    .contents__img{
+        width: auto;
+    }
+}
