--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ line-height: 40px;
 }
 .login-compl p strong {
     font-weight: 500;
-    color: #D4D9E4;
+    color: #1776E1;
 }
 
 .modal-menu-top .login-compl {
