--- a/css/common.css
+++ b/css/common.css
@@ -126,6 +126,11 @@ padding: 13px;
     letter-spacing: -0.03em;
     color: #979BA4;
 }
+.input-nomal:read-only{
+    background: #F9FCFF;
+border: 1px solid #D4D9E4;
+color: #8191A5;
+}
 .top-nab-btn {
     text-align: center;
     margin-bottom: 22px;
@@ -241,6 +246,36 @@ input[type="number"]::-webkit-inner-spin-button {
     resize: none;
     display: block;
 }   
+.position{
+    padding: 40px 60px;
+    background: #F1F7FB;
+    border-radius: 14px;
+    margin-top: 20px;
+    position: relative;
+}
+.position p {
+    color: #555555;
+    margin-bottom: 20px;
+}
+
+
+.position p::before{
+    content: '';
+    background: url(/img/ckeck-blue.png) no-repeat;
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    margin-right: 10px;
+    transform: translateY(3px);
+}
+.position__list {
+    display: flex;
+    width: 90%;
+    flex-wrap: wrap;
+}
+.position3 p {
+    width: 33%;
+}
 
 .line1{
     white-space: normal;
@@ -378,6 +413,54 @@ input[type="checkbox"]:checked + .check-small {
 }
 
 
+.table-nomal {
+    border-top: 3px solid #ECF0F8;
+    border-bottom: 3px solid #ECF0F8;
+}
+.table-nomal-tr {
+    display: flex;
+    flex-wrap: nowrap;
+    border-bottom: 1px solid #ECF0F8;
+}
+.table-nomal-th {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.table-nomal .table-nomal-th, .table-nomal .table-nomal-td {
+    padding: 20px 40px;
+
+}
+.table-nomal .table-nomal-tr:last-child {
+    border-bottom: none;
+}
+.table-nomal .table-nomal-th {
+    font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+color: #333333;
+background: #F9FCFF;
+}
+.table-nomal .table-nomal-td{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #333333;
+}
+.table-nomal-footnote {
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: -0.03em;
+    margin-top: 10px;
+    color: #555555;
+}
+.underline {
+    text-decoration: underline;
+}
+.color-blue{
+    color: #1776E1;
+}
 /* 공통 끝 */
 
 
@@ -1112,7 +1195,40 @@ transform: rotate(180deg);
     .top-nab-btn > a{
         border-radius: 100px;
     }
-    
+    .position-img1{
+        display: none;
+    }
+    .position {
+        padding: 20px 30px;
+    }
+    .position3 p {
+        width: 100%;
+    }
+    .position p:nth-last-child(2), .position p:nth-last-child(3){
+        margin-bottom: 20px;
+    }
+    .table-nomal tr {
+        display: flex;
+        flex-direction: column;
+    }
+    .table-nomal tr th, .table-nomal tr td {
+        display: block;
+    }
+    .table-nomal-tr {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .table-nomal-th {
+        width: 100%;
+        border-bottom: 1px solid #ECF0F8
+    }
+    .table-nomal .table-nomal-td {
+        width: 100%;
+        text-align: center;
+    }
+    .table-nomal .container__list {
+        width: auto;
+    }
 } 
 
 /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
