--- a/css/common.css
+++ b/css/common.css
@@ -71,6 +71,7 @@ select {
     font-weight: 500;
 font-size: 16px;
 line-height: 24px;
+min-width: 180px;
 width: 180px;
 padding: 13px;
 }
@@ -127,6 +128,11 @@ padding: 13px;
     color: #979BA4;
 }
 .input-nomal:read-only{
+    background: #F9FCFF;
+border: 1px solid #D4D9E4;
+color: #8191A5;
+}
+.input-nomal[readonly="readonly"]{
     background: #F9FCFF;
 border: 1px solid #D4D9E4;
 color: #8191A5;
