--- a/css/common.css
+++ b/css/common.css
@@ -732,7 +732,7 @@ header .row {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: 'GmarketSansMedium';
+    font-family: 'GmarketSansBold';
     font-style: normal;
     font-weight: 600;
     font-size: 40px;
