--- a/css/notice.css
+++ b/css/notice.css
@@ -4,15 +4,26 @@
 
 /* 공지사항 글 목록 */
 /* 테이블 상단 스타일 */
-.search-nomal {
+.search-wrap {
   padding: 10px 15px;
   border: 1px solid #D4D9E4;
   border-radius: 6px;
-  font-size: 16px;
-  position: relative;
-  background: url('/img/Union.png') no-repeat 94% 50%/15px auto;
   background-color: #fff;
-  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-wrap input{
+  border: none;
+}
+.search-wrap input::placeholder{
+  color: #979BA4;
+}
+.search-wrap .search-icon{
+  width: 18px;
+  height: 18px;
+  background: url('/img/Union.png') no-repeat 94% 50%/15px auto;
+  background-size: contain;
 }
 .table-top{
   display: flex;
@@ -93,6 +104,7 @@
 }
 .table-wrap tbody td:nth-child(2){
   width: 510px;
+  text-align: left;
 }
 .table-wrap tbody td:nth-child(3){
   width: 200px;
@@ -114,6 +126,12 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+}
+.pagination button{
+  margin-right: 6px;
+}
+.pagination button:last-child{
+  margin-right: 0;
 }
 .pagination .prev{
   width: 34px;
@@ -161,6 +179,9 @@
 }
 .mr10{
   margin-right: 10px;
+}
+.mr30{
+  margin-right: 30px;
 }
 .mb16{
   margin-bottom: 16px;
@@ -266,6 +287,7 @@
 }
 .file-upload .file-sel > div > div {
   width: 14px;
+  min-width: 14px;
   height: 18px;
   background: url("../img/icon-file-upload.svg") center center / contain no-repeat;
   margin-right: 10px;
@@ -276,6 +298,7 @@
 .file-upload .file-sel > div > button {
   width: 22px;
   height: 22px;
+  min-width: 22px;
   background: url("../img/icon-file-del.svg") center center / contain no-repeat;
 }
 /* 공지사항 글 상세 */
@@ -368,17 +391,22 @@
 .file-download{
   margin-top: 40px;
 }
-.file-download > div{
+.file-download > a{
+  display: block;
+  margin-bottom: 10px;
+  width: fit-content;
+}
+.file-download > a > div{
   width: 600px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px 15px;
   border: 1px solid #D4D9E4;
   border-radius: 6px;
   background-color: #fff;
-  margin-bottom: 10px;
 }
-.file-download > div:last-child{
+.file-download > a:last-child{
   margin-bottom: 0;
 }
 .file-download .file-neme{
@@ -387,12 +415,14 @@
 }
 .file-download .file-neme div{
   width: 14px;
+  min-width: 14px;
   height: 18px;
   background: url("../img/icon-file-upload.svg") center center / contain no-repeat;
   margin-right: 10px;
 }
-.file-download button{
+.file-download .download-btn{
   width: 24px;
+  min-width: 24px;
   height: 24px;
   background: url("../img/icon-file-download.svg") center center / contain no-repeat;
   background-size: contain;
@@ -412,6 +442,10 @@
   transform: translateY(0px);
   flex-wrap: wrap;
 }
+.faq-top .top-nab-btn > a{
+  height: 50px;
+  font-size: 16px;
+}
 /* faq 부분 */
 .faq-wrap{
   border-top: 3px solid #ECF0F8;
@@ -420,17 +454,20 @@
 .w160{
   width: 160px !important;
 }
-.faq-wrap>div{
+.faq-wrap > a{
+  display: block;
   border-bottom: 1px solid #ECF0F8;
 }
-.faq-wrap>div:last-child{
+.faq-wrap > a:last-child{
   border-bottom: 0;
 }
 .question{
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  border-bottom: 1px solid #ECF0F8;
 }
 .question > div{
   display: flex;
@@ -439,31 +476,46 @@
 .question > div:last-child{
   border-bottom: 0;
 }
-.question > div > div{
+.question .q-icon{
   width: 25px;
   height: 20px;
   background: url("../img/faq-q.png") center center / contain no-repeat;
   background-size: contain;
   margin-right: 10px;
 }
-.question > div > p{
+.question > a > div > p{
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
   color: #333333;
 }
-.question button{
+.question .accoBtn{
   width: 15px;
   height: 15px;
   background: url("../img/ep_arrow-right-bold.png") center center / contain no-repeat;
   background-size: contain;
+  cursor: pointer;
 }
-.question.active button{
+.question.active .accoBtn{
   transform: rotate(-180deg);
 }
 .answer{
   padding: 30px 55px;
   background-color: #F9FCFF;
+}
+.answer p{
+  font-weight: 400;
+  font-size: 16px;
+  color: #555555;
+}
+.answer p > a{
+  color: #1776E1;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: underline;
+}
+.f-left{
+  float: left;
 }
 /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
 @media all and (max-width:1023px) {
@@ -482,6 +534,9 @@
   .table-top .w300{
     width: 210px;
   }
+  .table-wrap table thead tr th:nth-child(1){
+    display: none;
+  }
   .table-wrap table thead tr th:nth-child(4){
     display: none;
   }
@@ -491,7 +546,9 @@
   .table-wrap table thead tr th:nth-child(6){
     display: none;
   }
-
+  .table-wrap tbody td:nth-child(1){
+    display: none;
+  }
   .table-wrap tbody td:nth-child(4){
     display: none;
   }
@@ -508,10 +565,17 @@
   .post .input-wrap>.flex{
     width: 100%;
     margin-bottom: 10px;
+    display: block;
   }
   .post .input-wrap>.flex:last-child{
     margin-bottom: 0px;
   }
+  .contents-wrap {
+    display: block;
+}
+.file-wrap {
+  display: block;
+}
   .notice-btn-bl{
     font-size: 15px;
     width: fit-content;
@@ -555,7 +619,7 @@
   margin-right: 20px;
   padding: 10px 0;
 }
-.file-download > div {
+.file-download > a > div {
   width: 100%;
 }
 /* faq */
