--- a/css/notice.css
+++ b/css/notice.css
@@ -133,12 +133,21 @@
 .pagination button:last-child{
   margin-right: 0;
 }
-.pagination .prev{
+.pagination .prev.active{
   width: 34px;
   height: 34px;
   background: url('/img/pagination-left.png') no-repeat 94% 50%/15px auto;
   background-size: contain;
   border-radius: 6px;
+  transform:rotate(0deg);
+}
+.pagination .prev{
+  width: 34px;
+  height: 34px;
+  background: url('/img/pagination-right.png') no-repeat 94% 50%/15px auto;
+  background-size: contain;
+  border-radius: 6px;
+  transform:rotate(-180deg);
 }
 .pagination .next{
   width: 34px;
@@ -146,6 +155,15 @@
   background: url('/img/pagination-right.png') no-repeat 94% 50%/15px auto;
   background-size: contain;
   border-radius: 6px;
+  transform:rotate(0deg);
+}
+.pagination .next.active{
+  width: 34px;
+  height: 34px;
+  background: url('/img/pagination-left.png') no-repeat 94% 50%/15px auto;
+  background-size: contain;
+  border-radius: 6px;
+  transform:rotate(-180deg);
 }
 .pagination .page{
   width: 34px;
