--- a/css/dataform.css
+++ b/css/dataform.css
@@ -29,12 +29,35 @@
 .mb20 {
     margin-bottom: 20px;
 }
+.mb10 {
+    margin-bottom: 10px;
+}
 .w600{
     width: 600px;
 }
 
 .container__title {
     margin-bottom: 20px;
+}
+.container {
+    margin-bottom: 40px;
+}
+.textarea-num {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+}
+.textarea-num span {
+    font-weight: 500;
+font-size: 15px;
+line-height: 22px;
+color: #333;
+
+}
+.textarea-num span:nth-child(1){
+    color: #1776E1;
+    margin-right: 4px;
 }
 .date-nomal {
     color: #979BA4;
@@ -403,12 +426,15 @@ label.mw-cus2 {
     .b-item-01 label:last-of-type {
         margin-right: 0;
     }
-    .b-item-01 label:nth-of-type(1) {
+    .b-item-01 label {
         width: 100%;
+        margin-right: 0;
+
     }
     .b-item-01 > label:nth-of-type(2),
     .b-item-01 > label:nth-of-type(3)  {
         margin-bottom: 10px;
+        margin-right: 0;
     }
     .b-item-02 {
         flex-wrap: wrap;
@@ -470,7 +496,7 @@ label.mw-cus2 {
     .w600 {
         width: 100%;
     }
-    .wrap-04.box-style > div:nth-child(2) > div:first-child > div {
+    .wrap-04.box-style > div:nth-child(2) > div:nth-child(1) > div,.wrap-04.box-style > div:nth-child(2) > div:nth-child(2) > div {
         width: 100%;
     }
 }
