--- a/css/common.css
+++ b/css/common.css
@@ -106,6 +106,10 @@ padding: 13px;
 .btn-full {
     width: 100%;
 }
+#inputId {
+    display: none;
+    margin-right: 10px;
+}
 .input-nomal {
     padding: 10px 15px;
     background: #FFFFFF;
@@ -127,11 +131,7 @@ padding: 13px;
     letter-spacing: -0.03em;
     color: #979BA4;
 }
-.input-nomal:read-only{
-    background: #F9FCFF;
-border: 1px solid #D4D9E4;
-color: #8191A5;
-}
+
 .input-nomal[readonly="readonly"]{
     background: #F9FCFF;
 border: 1px solid #D4D9E4;
@@ -636,7 +636,7 @@ header .row {
 }
 .header__menu .header__step1 > a {
     font-size: 19px;
-    font-family: 'GmarketSansMedium';
+    font-family: 'Gmarket Sans';
 }
 .header__menu .header__step1 ul {
     position: absolute;
@@ -663,7 +663,7 @@ header .row {
 }
 .header__menu .header__step1 .header__step2:last-child {
     border-bottom: 1px solid #ECECEC;
-
+    transform: translateY(-1px);
 }
 .header__menu .header__step1 > ul {
     cursor:auto
@@ -732,7 +732,7 @@ header .row {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: 'GmarketSansBold';
+    font-family: 'Gmarket Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 40px;
@@ -792,7 +792,7 @@ line-height: 24px;
     text-align: left;
 }
 .contents-title {
-    font-family: 'GmarketSansBold';
+    font-family: 'Gmarket Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 28px;
@@ -943,7 +943,7 @@ display: none;
     margin-bottom: 30px;
   }
   .modal__title h1 {
-    font-family: 'GmarketSansMedium';
+    font-family: 'Gmarket Sans';
 font-style: normal;
 font-weight: 400;
 font-size: 22px;
@@ -1318,7 +1318,7 @@ margin-bottom: 10px;
         width: 100%;
     }
     .position p:nth-last-child(2), .position p:nth-last-child(3){
-        margin-bottom: 20px;
+        margin-bottom: 20px !important;
     }
     .table-nomal tr {
         display: flex;
