--- a/css/site-map.css
+++ b/css/site-map.css
@@ -11,7 +11,7 @@
     margin-right: 0;
 }
 .site-map .contents-title{
-    font-family: 'Gmarket Sans';
+    font-family: 'GmarketSansMedium';
 font-style: normal;
 display: flex;
 font-size: 22px;
